--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -23,8 +23,8 @@
         android:layout_marginTop="310dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="短信识别 by Aven"
-        android:textStyle="bold"
+        android:text="短信转发 by Aven"
+        android:textStyle="normal"
         android:gravity="center"
         android:textSize="28sp"
         android:id="@+id/textView" />
